--- a/startpage/style.css
+++ b/startpage/style.css
@@ -12,3 +12,4 @@ h2{margin-top:0;margin-bottom:0}
 #col3,#col7{background-color:rgba(76,175,80,0.71)}
 #col4,#col8{background-color:rgba(0,188,212,0.88)}
 #col5,#col6,#col7,#col8{margin-top:0!important;padding-top:0!important}
+#search{margin: 20px}
