--- a/startpage/style.css
+++ b/startpage/style.css
@@ -1,57 +1,48 @@
 body {
-    font-family: Roboto;
-    background: darkslateblue;
+  font-family: Roboto;
+  background: darkslateblue;
 }
 
 ul {
   list-style-type: none;
+  padding-left: 50px;
 }
 
+li {
+  /*margin: 1vh;*/
+  line-height: 50px;
+  padding-left: 50px;
+}
 
+#search {
+  width: 50vh;
+}
+
+#searchLabel {
+  padding: 10px;
+}
 .main-box {
+  background: cornflowerblue;
 
-    background: cornflowerblue;
-
-
-  /*min-height: 100%;  /* Fallback for vh unit */
   margin-top: 25vh;
   min-height: 50vh;
-   /* You might also want to use
-                        'height' property instead.
-                        
-                        Note that for percentage values of
-                        'height' or 'min-height' properties,
-                        the 'height' of the parent element
-                        should be specified explicitly.
-  
-                        In this case the parent of '.vertical-center'
-                        is the <body> element */
+  width: 100%;
 
-  /* Make it a flex container */
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex; 
-  
-  /* Align the bootstrap's container vertically */
-    -webkit-box-align : center;
+
+  -webkit-box-align : center;
   -webkit-align-items : center;
-       -moz-box-align : center;
-       -ms-flex-align : center;
-          align-items : center;
-  
-  /* In legacy web browsers such as Firefox 9
-     we need to specify the width of the flex container */
-  width: 100%;
-  
-  /* Also 'margin: 0 auto' doesn't have any effect on flex items in such web browsers
-     hence the bootstrap's container won't be aligned to the center anymore.
-  
-     Therefore, we should use the following declarations to get it centered again */
-         -webkit-box-pack : center;
-            -moz-box-pack : center;
-            -ms-flex-pack : center;
+  -moz-box-align : center;
+  -ms-flex-align : center;
+  align-items : center;
+
+  -webkit-box-pack : center;
+  -moz-box-pack : center;
+  -ms-flex-pack : center;
   -webkit-justify-content : center;
-          justify-content : center;
+  justify-content : center;
 }
